# german-tutor

./: .gitignore  Dockerfile  LICENSE  Modelfile  Modelfile-German-Tutor  Modelfile-Rock-Ballad-Sonnet  Modelfile-Rock-Ballad-Sonnets  README.md  docker-compose.yml  init_github.sh  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
