[project]
name = "german-tutor"
version = "0.1.0"
description = "A German language tutor and creative assistant with Ollama and Streamlit."
authors = ["Chad Vawter <chad.vawter@gmail.com>"]
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "ollama",
    "chroma"
]

[tool.uv]
# Add uv-specific configuration here if needed